# product-research

./: .env.example  .gitignore  README.md  chat.sh  install.sh  pyproject.toml  requirements.txt  research.sh  research_001.md
.qwen/: settings.json  settings.json.orig
product_research/: __init__.py  agents.py  amazon_review_scraper.py  cli.py  config.py  prompt.py  scraper.py  tools.py
tests/: test_tavily_search.py
