[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product_research"
version = "0.1.0"
description = "Product Research Agent using LangChain DeepAgents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Utsav Krishnan", email = "ketankr9@gmail.com"}
]
dependencies = [
    "deepagents>=0.5.3",
    "tavily-python>=0.7.23",
    "curl-cffi>=0.15.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "beautifulsoup4>=4.14.3",
    "langchain-anthropic>=1.4.1",
    "langchain-core>=1.3.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "click>=8.3.3",
    "html2text>=2025.4.15",
]

[project.scripts]
product-research = "product_research.cli:main"

[tool.setuptools]
packages = ["product_research"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
